# portkullis

./: .gitattributes  Cargo.toml  Containerfile  Makefile  README.md
anomaly_detection_engine/: Cargo.toml  build.rs
anomaly_detection_engine/proto/: anomaly.proto
anomaly_detection_engine/src/: embeddings.rs  main.rs
config/: .gitignore  envoy.yaml
signature_detection_engine/: Cargo.toml
signature_detection_engine/src/: lib.rs
signature_detection_engine/src/compatibility/: mod.rs
signature_detection_engine/src/compatibility/modsecurity/: mod.rs
signature_detection_engine/src/compatibility/modsecurity/directives/: consts.rs  mod.rs  sec_marker.rs  sec_rule.rs
signature_detection_engine/src/compatibility/modsecurity/directives/parsers/: mod.rs  sec_rule.rs
signature_detection_engine/src/compatibility/modsecurity/rulesets/: mod.rs
signature_detection_engine/src/errors/: mod.rs
wasm_module/: Cargo.toml  build.rs
wasm_module/src/: lib.rs
xtask/: Cargo.toml  build.rs
xtask/src/: main.rs
