[package]
name = "anomaly_detection_engine"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
hf-hub = "0.4.3"
prost = "0.13"
qdrant-client = "1.14.0"
serde = "1.0.219"
serde_json = "1.0.140"
tokenizers = "0.21.2"
tokio = { version = "1.45", features = ["full"] }
tonic = "0.12"
tonic-reflection = "0.12"

[build-dependencies]
tonic-build = "0.12"
