[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anomaly_detection_engine = { path = "../anomaly_detection_engine" }
prost = "0.13"
qdrant-client = "1.14.0"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["full"] }
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
